--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,9 @@ jar {
 
 dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    testCompile group: 'junit', name: 'junit', version: '4.8.1'
+}
+
+test {
+    useJUnitPlatform()
 }
