--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ jar {
 dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.6'
     testCompile group: 'junit', name: 'junit', version: '4.8.1'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
 }
 
 test {
